<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.kolibru.schoolinfo.SplashActivity"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_margin="16dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="false" />

        <TextView
            android:text="@string/kao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
            android:id="@+id/textView2"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:text="@string/informer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"

            android:id="@+id/textView3"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp" />
    </LinearLayout>

    <TextView
        android:text="@string/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/textView4" />
</RelativeLayout>
