<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_background_color">

        <ScrollView
            android:layout_marginTop="?android:attr/actionBarSize"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/base_background_color">

                <TextView
                    android:id="@+id/info"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/base_label_color"
                    android:visibility="gone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:id="@+id/llh">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/base_label_color"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_weight="1"
                        android:text="@string/your_number"/>

                    <EditText
                        android:background="@drawable/textview_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_number"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/base_line_color"
                        android:id="@+id/phone"
                        android:inputType="phone"
                        android:padding="8dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:layout_height="1px"
                    android:background="@color/base_line_color"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_code"
                    android:layout_gravity="center_horizontal"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/get" />

                <LinearLayout
                    android:id="@+id/code_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#ccc"
                    android:padding="16dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/base_label_color"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_weight="1"
                        android:text="@string/code_confirm"/>

                    <EditText
                        android:background="@drawable/textview_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/code_confirm"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/base_line_color"
                        android:id="@+id/code"
                        android:inputType="number"
                        android:padding="8dp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_margin="16dp"
                        android:layout_height="1px"
                        android:background="@color/base_line_color"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_code_confirm"
                        android:layout_gravity="center_horizontal"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:id="@+id/confirm" />
                </LinearLayout>



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/logout"
                    style="@style/ButtonRedColor"
                    android:theme="@style/ButtonRedColor"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/logout"
                    android:visibility="gone"/>


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>